RESOLVED FIXED216252
[Win] MiniBrowser URL bar can't insert a longer text than the window width
https://bugs.webkit.org/show_bug.cgi?id=216252
Summary [Win] MiniBrowser URL bar can't insert a longer text than the window width
Fujii Hironori
Reported 2020-09-07 14:28:26 PDT
[Win] MiniBrowser URL bar can't insert a longer text than the window width * Can't type a text long URL * Can't paste a long URL
Attachments
Patch (1.86 KB, patch)
2020-09-07 14:32 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2020-09-07 14:32:16 PDT
Per Arne Vollan
Comment 2 2020-09-08 07:27:44 PDT
Comment on attachment 408196 [details] Patch R=me
Fujii Hironori
Comment 3 2020-09-08 12:49:43 PDT
Comment on attachment 408196 [details] Patch Clearing flags on attachment: 408196 Committed r266744: <https://trac.webkit.org/changeset/266744>
Fujii Hironori
Comment 4 2020-09-08 12:49:46 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2020-09-08 12:50:14 PDT
Note You need to log in before you can comment on or make changes to this bug.