[Win] MiniBrowser URL bar can't insert a longer text than the window width https://bugs.webkit.org/show_bug.cgi?id=216252

Reviewed by Per Arne Vollan.

* MiniBrowser/win/MainWindow.cpp:
(MainWindow::createToolbar): Set ES_AUTOHSCROLL and for the URL
bar edit control. Removed ES_AUTOVSCROLL for it since it doesn't
scroll vertically.

Canonical link: https://commits.webkit.org/229109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266744 268f45cc-cd09-0410-ab3c-d52691b4dbfc